--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,46 +4,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/box_inset_layout_padding"
-        android:theme="@android:style/Theme.DeviceDefault.Settings"
         tools:context=".MainActivity"
         tools:deviceIds="wear">
 
-    <ScrollView
+    <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/settingsFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
+            android:layout_height="wrap_content"
+            android:scrollbars="none"
+            android:overScrollMode="always"
+            android:name="net.ultrahex.wear.chime.SettingsFragment"
+            android:layout="@android:layout/preference_category" />
 
-        <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-            <TextView
-                    android:id="@+id/settingsTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/settingsTitle"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-            <Switch
-                    android:id="@+id/switchVibrate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="8dp"
-                    android:text="@string/vibrate"
-                    android:textAlignment="textStart" />
-
-            <Switch
-                    android:id="@+id/switchSound"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:paddingVertical="8dp"
-                    android:showText="false"
-                    android:text="@string/sound"
-                    android:textAlignment="textStart" />
-        </LinearLayout>
-    </ScrollView>
 </androidx.wear.widget.BoxInsetLayout>
